# inferring_geometries

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  burn_plot.gp  cmake_install.cmake  diff_sigma_obs_sigma_histograms.gp  diff_sigma_trials_single.sh  mcmc_tests.sh  path_length_trials_single.sh  plot_one_sigma_histogram.gp  plot_variances_single.gp  sigma_param_trials_single.sh
Testing/MCMC/: chain.gp  chain_complex_ts.gp  single_param_chain.gp
Testing/MCMC/constants.saved/: chain_complex.gp
Testing/Trajectories/: trajectory_plot.gp
include/: euler_maruyama.h  file_io.h  fourier_series.h  fourier_transform.h  grid.h  mcmc.h  pmcmc.h  smc.h
scripts/: pmcmc.r
scripts/bash/: obs_delta_trials_single.sh  obs_sigma_trials_single.sh  parallel_paths_trials_single.sh
scripts/gnuplot/: burn_animation.gp  obs_delta_histograms.gp  param_sigma_histogram.gp  plot_averages_complex_four.gp  plot_one_histogram.gp  plot_parameter_real_one.gp
src/: euler_maruyama.cxx  file_io.cxx  file_io_demo.cxx  forest_fires_demo.cxx  fourier_series.cxx  fourier_series_demo.cxx  fourier_transform.cxx  fourier_transform_demo.cxx  grid.cxx  grid_demo.cxx  langevin_demo.cxx  mcmc.cxx  mcmc_langevin_demo.cxx  mcmc_langevin_single_demo.cxx  mcmc_ou_demo.cxx  one_param_mcmc.cxx  pmcmc.cxx  pmcmc_demo.cxx  smc.cxx  smc_demo.cxx  smc_diffusion_bridge_demo.cxx  trajectory.cxx  util.cxx  util.h
